tests/negative/other/generic_function_inference_conflict.tx
// EXPECTED: COMPILE_ERROR
// Description: Generic parameters inferred from multiple arguments must stay consistent.

function same<T>(left: T, right: T): T {
    return left;
}

function main() {
    let value = same(1, "wrong");
}
